--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vendor/speedtemp",
+    "name": "vendor-taro/speedtemp",
     "description": "speedtemp package library",
     "type": "library",
     "license": "MIT",
@@ -21,7 +21,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Vendor\\SpeedTemp\\PackageServiceProvider"
+                "VendorTaro\\SpeedTemp\\PackageServiceProvider"
             ]
         }
     },
